[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/donut_collision_polygon2D/donut_collision_polygon2D.gd" type="Script" id=1]
[ext_resource path="res://assets/scenes/world.gd" type="Script" id=2]
[ext_resource path="res://assets/scenes/WorldUI.tscn" type="PackedScene" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform float power = 0.2;
uniform float alti = 0.2;

void vertex(){
	VERTEX.x = VERTEX.x + sin(TIME * VERTEX.x / power) * alti;
	VERTEX.y = VERTEX.y + sin(TIME * VERTEX.y / power) * alti;
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/power = 1000.0
shader_param/alti = 4.0

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="border" type="StaticBody2D" parent="."]

[node name="ring" type="CollisionPolygon2D" parent="border"]
polygon = PoolVector2Array( 1.25522e-13, -2050, 35.7774, -2049.69, 71.544, -2048.75, 143.001, -2045.01, 178.669, -2042.2, 249.832, -2034.72, 285.305, -2030.05, 320.691, -2024.76, 391.158, -2012.34, 426.219, -2005.2, 495.94, -1989.11, 530.579, -1980.15, 565.057, -1970.59, 633.485, -1949.67, 667.415, -1938.31, 734.654, -1913.84, 767.943, -1900.73, 800.999, -1887.04, 866.367, -1857.93, 898.661, -1842.53, 962.417, -1810.04, 993.86, -1792.97, 1025, -1775.35, 1086.33, -1738.5, 1116.51, -1719.27, 1175.83, -1679.26, 1204.96, -1658.48, 1233.72, -1637.2, 1290.11, -1593.15, 1317.71, -1570.39, 1371.72, -1523.45, 1398.1, -1499.28, 1449.57, -1449.57, 1474.65, -1424.05, 1499.28, -1398.1, 1547.15, -1344.92, 1570.39, -1317.71, 1615.42, -1262.11, 1637.2, -1233.72, 1658.48, -1204.96, 1699.53, -1146.35, 1719.27, -1116.51, 1757.19, -1055.83, 1775.35, -1025, 1792.97, -993.86, 1826.56, -930.68, 1842.53, -898.661, 1872.77, -833.81, 1887.04, -800.999, 1900.73, -767.943, 1926.37, -701.141, 1938.31, -667.415, 1960.42, -599.362, 1970.59, -565.057, 1980.15, -530.579, 1997.46, -461.15, 2005.2, -426.219, 2018.86, -355.979, 2024.76, -320.691, 2030.05, -285.305, 2038.77, -214.283, 2042.2, -178.669, 2047.19, -107.289, 2048.75, -71.544, 2050, 0, 2049.69, 35.7774, 2048.75, 71.544, 2045.01, 143.001, 2042.2, 178.669, 2034.72, 249.832, 2030.05, 285.305, 2024.76, 320.691, 2012.34, 391.158, 2005.2, 426.219, 1989.11, 495.94, 1980.15, 530.579, 1970.59, 565.057, 1949.67, 633.485, 1938.31, 667.415, 1913.84, 734.654, 1900.73, 767.943, 1887.04, 800.999, 1857.93, 866.367, 1842.53, 898.661, 1810.04, 962.417, 1792.97, 993.86, 1775.35, 1025, 1738.5, 1086.33, 1719.27, 1116.51, 1679.26, 1175.83, 1658.48, 1204.96, 1637.2, 1233.72, 1593.15, 1290.11, 1570.39, 1317.71, 1523.45, 1371.72, 1499.28, 1398.1, 1449.57, 1449.57, 1424.05, 1474.65, 1398.1, 1499.28, 1344.92, 1547.15, 1317.71, 1570.39, 1262.11, 1615.42, 1233.72, 1637.2, 1204.96, 1658.48, 1146.35, 1699.53, 1116.51, 1719.27, 1055.83, 1757.19, 1025, 1775.35, 993.86, 1792.97, 930.68, 1826.56, 898.661, 1842.53, 833.81, 1872.77, 800.999, 1887.04, 767.943, 1900.73, 701.141, 1926.37, 667.415, 1938.31, 599.362, 1960.42, 565.057, 1970.59, 530.579, 1980.15, 461.15, 1997.46, 426.219, 2005.2, 355.979, 2018.86, 320.691, 2024.76, 285.305, 2030.05, 214.283, 2038.77, 178.669, 2042.2, 107.289, 2047.19, 71.544, 2048.75, 1.25522e-13, 2050, -35.7774, 2049.69, -71.544, 2048.75, -143.001, 2045.01, -178.669, 2042.2, -249.832, 2034.72, -285.305, 2030.05, -320.691, 2024.76, -391.158, 2012.34, -426.219, 2005.2, -495.94, 1989.11, -530.579, 1980.15, -565.057, 1970.59, -633.485, 1949.67, -667.415, 1938.31, -734.654, 1913.84, -767.943, 1900.73, -800.999, 1887.04, -866.367, 1857.93, -898.661, 1842.53, -962.417, 1810.04, -993.86, 1792.97, -1025, 1775.35, -1086.33, 1738.5, -1116.51, 1719.27, -1175.83, 1679.26, -1204.96, 1658.48, -1233.72, 1637.2, -1290.11, 1593.15, -1317.71, 1570.39, -1371.72, 1523.45, -1398.1, 1499.28, -1449.57, 1449.57, -1474.65, 1424.05, -1499.28, 1398.1, -1547.15, 1344.92, -1570.39, 1317.71, -1615.42, 1262.11, -1637.2, 1233.72, -1658.48, 1204.96, -1699.53, 1146.35, -1719.27, 1116.51, -1757.19, 1055.83, -1775.35, 1025, -1792.97, 993.86, -1826.56, 930.68, -1842.53, 898.661, -1872.77, 833.81, -1887.04, 800.999, -1900.73, 767.943, -1926.37, 701.141, -1938.31, 667.415, -1960.42, 599.362, -1970.59, 565.057, -1980.15, 530.579, -1997.46, 461.15, -2005.2, 426.219, -2018.86, 355.979, -2024.76, 320.691, -2030.05, 285.305, -2038.77, 214.283, -2042.2, 178.669, -2047.19, 107.289, -2048.75, 71.544, -2050, 2.51044e-13, -2049.69, -35.7774, -2048.75, -71.544, -2045.01, -143.001, -2042.2, -178.669, -2034.72, -249.832, -2030.05, -285.305, -2024.76, -320.691, -2012.34, -391.158, -2005.2, -426.219, -1989.11, -495.94, -1980.15, -530.579, -1970.59, -565.057, -1949.67, -633.485, -1938.31, -667.415, -1913.84, -734.654, -1900.73, -767.943, -1887.04, -800.999, -1857.93, -866.367, -1842.53, -898.661, -1810.04, -962.417, -1792.97, -993.86, -1775.35, -1025, -1738.5, -1086.33, -1719.27, -1116.51, -1679.26, -1175.83, -1658.48, -1204.96, -1637.2, -1233.72, -1593.15, -1290.11, -1570.39, -1317.71, -1523.45, -1371.72, -1499.28, -1398.1, -1449.57, -1449.57, -1424.05, -1474.65, -1398.1, -1499.28, -1344.92, -1547.15, -1317.71, -1570.39, -1262.11, -1615.42, -1233.72, -1637.2, -1204.96, -1658.48, -1146.35, -1699.53, -1116.51, -1719.27, -1055.83, -1757.19, -1025, -1775.35, -993.86, -1792.97, -930.68, -1826.56, -898.661, -1842.53, -833.81, -1872.77, -800.999, -1887.04, -767.943, -1900.73, -701.141, -1926.37, -667.415, -1938.31, -599.362, -1960.42, -565.057, -1970.59, -530.579, -1980.15, -461.15, -1997.46, -426.219, -2005.2, -355.979, -2018.86, -320.691, -2024.76, -285.305, -2030.05, -214.283, -2038.77, -178.669, -2042.2, -107.289, -2047.19, -71.544, -2048.75, -3.76566e-13, -2050, -3.75832e-13, -2046, -71.4044, -2044.75, -107.079, -2043.2, -178.321, -2038.21, -213.865, -2034.79, -284.748, -2026.09, -320.065, -2020.81, -355.284, -2014.92, -425.387, -2001.29, -460.25, -1993.56, -529.544, -1976.28, -563.954, -1966.74, -598.193, -1956.6, -666.112, -1934.53, -699.773, -1922.61, -766.445, -1897.02, -799.436, -1883.35, -832.183, -1869.11, -896.907, -1838.93, -928.865, -1823, -991.92, -1789.47, -1023, -1771.89, -1053.77, -1753.76, -1114.33, -1715.92, -1144.11, -1696.21, -1202.61, -1655.25, -1231.31, -1634.01, -1259.64, -1612.27, -1315.14, -1567.33, -1342.3, -1544.14, -1395.37, -1496.35, -1421.27, -1471.77, -1446.74, -1446.74, -1496.35, -1395.37, -1520.47, -1369.04, -1567.33, -1315.14, -1590.04, -1287.59, -1634.01, -1231.31, -1655.25, -1202.61, -1675.99, -1173.54, -1715.92, -1114.33, -1735.11, -1084.21, -1771.89, -1023, -1789.47, -991.92, -1806.51, -960.539, -1838.93, -896.907, -1854.31, -864.677, -1883.35, -799.436, -1897.02, -766.445, -1910.11, -733.221, -1934.53, -666.112, -1945.86, -632.249, -1966.74, -563.954, -1976.28, -529.544, -1985.23, -494.972, -2001.29, -425.387, -2008.41, -390.395, -2020.81, -320.065, -2026.09, -284.748, -2030.75, -249.345, -2038.21, -178.321, -2041.02, -142.722, -2044.75, -71.4044, -2045.69, -35.7076, -2046, 2.50554e-13, -2044.75, 71.4044, -2043.2, 107.079, -2038.21, 178.321, -2034.79, 213.865, -2026.09, 284.748, -2020.81, 320.065, -2014.92, 355.284, -2001.29, 425.387, -1993.56, 460.25, -1976.28, 529.544, -1966.74, 563.954, -1956.6, 598.193, -1934.53, 666.112, -1922.61, 699.773, -1897.02, 766.445, -1883.35, 799.436, -1869.11, 832.183, -1838.93, 896.907, -1823, 928.865, -1789.47, 991.92, -1771.89, 1023, -1753.76, 1053.77, -1715.92, 1114.33, -1696.21, 1144.11, -1655.25, 1202.61, -1634.01, 1231.31, -1612.27, 1259.64, -1567.33, 1315.14, -1544.14, 1342.3, -1496.35, 1395.37, -1471.77, 1421.27, -1446.74, 1446.74, -1395.37, 1496.35, -1369.04, 1520.47, -1315.14, 1567.33, -1287.59, 1590.04, -1231.31, 1634.01, -1202.61, 1655.25, -1173.54, 1675.99, -1114.33, 1715.92, -1084.21, 1735.11, -1023, 1771.89, -991.92, 1789.47, -960.539, 1806.51, -896.907, 1838.93, -864.677, 1854.31, -799.436, 1883.35, -766.445, 1897.02, -733.221, 1910.11, -666.112, 1934.53, -632.249, 1945.86, -563.954, 1966.74, -529.544, 1976.28, -494.972, 1985.23, -425.387, 2001.29, -390.395, 2008.41, -320.065, 2020.81, -284.748, 2026.09, -249.345, 2030.75, -178.321, 2038.21, -142.722, 2041.02, -71.4044, 2044.75, -35.7076, 2045.69, 1.25277e-13, 2046, 71.4044, 2044.75, 107.079, 2043.2, 178.321, 2038.21, 213.865, 2034.79, 284.748, 2026.09, 320.065, 2020.81, 355.284, 2014.92, 425.387, 2001.29, 460.25, 1993.56, 529.544, 1976.28, 563.954, 1966.74, 598.193, 1956.6, 666.112, 1934.53, 699.773, 1922.61, 766.445, 1897.02, 799.436, 1883.35, 832.183, 1869.11, 896.907, 1838.93, 928.865, 1823, 991.92, 1789.47, 1023, 1771.89, 1053.77, 1753.76, 1114.33, 1715.92, 1144.11, 1696.21, 1202.61, 1655.25, 1231.31, 1634.01, 1259.64, 1612.27, 1315.14, 1567.33, 1342.3, 1544.14, 1395.37, 1496.35, 1421.27, 1471.77, 1446.74, 1446.74, 1496.35, 1395.37, 1520.47, 1369.04, 1567.33, 1315.14, 1590.04, 1287.59, 1634.01, 1231.31, 1655.25, 1202.61, 1675.99, 1173.54, 1715.92, 1114.33, 1735.11, 1084.21, 1771.89, 1023, 1789.47, 991.92, 1806.51, 960.539, 1838.93, 896.907, 1854.31, 864.677, 1883.35, 799.436, 1897.02, 766.445, 1910.11, 733.221, 1934.53, 666.112, 1945.86, 632.249, 1966.74, 563.954, 1976.28, 529.544, 1985.23, 494.972, 2001.29, 425.387, 2008.41, 390.395, 2020.81, 320.065, 2026.09, 284.748, 2030.75, 249.345, 2038.21, 178.321, 2041.02, 142.722, 2044.75, 71.4044, 2045.69, 35.7076, 2046, 0, 2044.75, -71.4044, 2043.2, -107.079, 2038.21, -178.321, 2034.79, -213.865, 2026.09, -284.748, 2020.81, -320.065, 2014.92, -355.284, 2001.29, -425.387, 1993.56, -460.25, 1976.28, -529.544, 1966.74, -563.954, 1956.6, -598.193, 1934.53, -666.112, 1922.61, -699.773, 1897.02, -766.445, 1883.35, -799.436, 1869.11, -832.183, 1838.93, -896.907, 1823, -928.865, 1789.47, -991.92, 1771.89, -1023, 1753.76, -1053.77, 1715.92, -1114.33, 1696.21, -1144.11, 1655.25, -1202.61, 1634.01, -1231.31, 1612.27, -1259.64, 1567.33, -1315.14, 1544.14, -1342.3, 1496.35, -1395.37, 1471.77, -1421.27, 1446.74, -1446.74, 1395.37, -1496.35, 1369.04, -1520.47, 1315.14, -1567.33, 1287.59, -1590.04, 1231.31, -1634.01, 1202.61, -1655.25, 1173.54, -1675.99, 1114.33, -1715.92, 1084.21, -1735.11, 1023, -1771.89, 991.92, -1789.47, 960.539, -1806.51, 896.907, -1838.93, 864.677, -1854.31, 799.436, -1883.35, 766.445, -1897.02, 733.221, -1910.11, 666.112, -1934.53, 632.249, -1945.86, 563.954, -1966.74, 529.544, -1976.28, 494.972, -1985.23, 425.387, -2001.29, 390.395, -2008.41, 320.065, -2020.81, 284.748, -2026.09, 249.345, -2030.75, 178.321, -2038.21, 142.722, -2041.02, 71.4044, -2044.75, 35.7076, -2045.69, 1.25277e-13, -2046, 0.0001, -2050 )
script = ExtResource( 1 )
radius = 2048.0
width = 4.0
quality = 256

[node name="pol" type="Polygon2D" parent="border"]
material = SubResource( 2 )
color = Color( 0, 0, 0, 1 )
texture_rotation_degrees = 291.0
invert_enable = true
invert_border = 16384.0

[node name="world_objs1" type="Node2D" parent="."]

[node name="world_objs2" type="Node2D" parent="."]

[node name="world_objs3" type="Node2D" parent="."]

[node name="world_objs4" type="Node2D" parent="."]

[node name="upper" type="CanvasLayer" parent="."]

[node name="WoirldUI" parent="upper" instance=ExtResource( 3 )]
